[project]
name = "midstar"
version = "0.1.0"
description = ""
authors = [
    {name = "Dang Van Nghiem",email = "vannghiem848@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette (>=0.46.1,<0.47.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
